--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "@vueuse/core": "^11.1.0",
         "bootstrap": "^5.3.3",
         "chart.js": "^4.4.8",
+        "laravel-echo": "^2.1.3",
         "leaflet": "^1.9.4",
         "printd": "^1.6.0",
+        "pusher-js": "^8.4.0",
         "sweetalert2": "^11.6.13",
         "vue-multiselect": "^3.0.0",
         "vue3-leaflet": "^1.0.50",
