--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "chart.js": "^4.4.8",
         "laravel-echo": "^2.1.3",
         "leaflet": "^1.9.4",
+        "mitt": "^3.0.1",
         "printd": "^1.6.0",
         "pusher-js": "^8.4.0",
         "sweetalert2": "^11.6.13",
