--- a/package.json
+++ b/package.json
@@ -24,17 +24,19 @@
         "@vue-leaflet/vue-leaflet": "^0.10.1",
         "@vueuse/core": "^11.1.0",
         "bootstrap": "^5.3.3",
-        "chart.js": "^4.4.8",
+        "chart.js": "^4.5.0",
         "laravel-echo": "^2.1.3",
         "leaflet": "^1.9.4",
         "mitt": "^3.0.1",
         "printd": "^1.6.0",
         "pusher-js": "^8.4.0",
         "sweetalert2": "^11.6.13",
+        "vue-chartjs": "^5.3.2",
         "vue-multiselect": "^3.0.0",
         "vue3-leaflet": "^1.0.50",
         "vuetify": "^3.7.0",
         "vuex": "^4.1.0",
-        "vuex-persistedstate": "^4.1.0"
+        "vuex-persistedstate": "^4.1.0",
+        "xlsx": "^0.18.5"
     }
 }
